Exploring two way binding inside polymer components

--- a/app/components/pd-dashboard/pd-dashboard.html
+++ b/app/components/pd-dashboard/pd-dashboard.html
@@ -1,9 +1,10 @@
 <!-- Include dependencies -->
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
+<link rel="import" href="../pd-drawer/pd-drawer.html">
 
 <dom-module id="pd-dashboard">
     <template>
-        This is our custom pd-dashboard element
+        <pd-drawer></pd-drawer>
     </template>
 </dom-module>
 
