--- a/app/components/pd-drawer/pd-drawer.html
+++ b/app/components/pd-drawer/pd-drawer.html
@@ -1,17 +1,54 @@
 <dom-module id="pd-drawer">
     <template>
-        <p>
-            LeftShow:<input type="text" value="{{leftShow::input}}" /></p>
-        </p>
-         <p>
-            RightShow:<input type="text" value="{{rightShow::input}}" /></p>
-        </p>
-        <p>
-            The value of leftShow is: <span>{{leftShow}}</span>
-        </p>
-        <p>
-            The value of rightShow is: <span>{{rightShow}}</span>
-        </p>
+        <div id="drawer" class$="{{mainClasses}}">
+            <div class="c-p paper-toolbar p-l-05 p-r-05 shadow-bottom">
+                <div class="scrim" onclick="closeDrawers">
+                </div>
+                <paper-icon-button class="left-show-btn f-left" icon="menu" title="menu" on-click="toggleLeft">
+                </paper-icon-button>
+                <div class="pd-toolbar-header p-1-05 f-left">
+                    <content select=".logo"></content>
+                </div>
+                <paper-icon-button class="right-show-btn f-right" icon="more-vert" title="more-vert" on-click="toggleRight">
+                </paper-icon-button>
+            </div>
+            <div class="main c-n-dark">
+                <div class="main-section">
+                    <!-- Main content will go in here -->
+                    <content select="#main"></content>
+                </div>
+                <div class="scrim" on-click="closeDrawers">
+                </div>
+                <div class="left-drawer c-n-light shadow-right">
+                    <div class="drawer-inner">
+                        <div class="drawer-inner-width">
+                            <!-- Left hand side menu content will go in here -->
+                            <content select=".left-menu"></content>
+                            <paper-icon-button 
+                                class="pin-btn c-text-light" 
+                                icon="turned-in" 
+                                title="turned-in" 
+                                on-click="pinLeft">
+                            </paper-icon-button>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-drawer c-n-light shadow-left">
+                    <div class="drawer-inner">
+                        <div class="drawer-inner-width">
+                            <!-- Right hand side menu content will go in here -->
+                            <content select=".right-menu"></content>
+                            <paper-icon-button 
+                                class="pin-btn c-text-light" 
+                                icon="turned-in" 
+                                title="turned-in" 
+                                on-click="pinRight">
+                            </paper-icon-button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </template>
 </dom-module>
 
@@ -19,16 +56,77 @@
     Polymer({
         is: 'pd-drawer',
         properties: {
+            leftLocked: {
+                type: Boolean,
+                value: true
+            },
             leftShow: {
                 type: Boolean,
-                value: true,
-                notify: true
+                value: false
+            },
+            rightLocked: {
+                type: Boolean,
+                value: true
             },
             rightShow: {
                 type: Boolean,
-                value: true,
+                value: false,
+                notify: true
+            },
+            mobileMode: {
+                type: Boolean,
+                value: false
+            },
+            tabletMode: {
+                type: Boolean,
+                value: false
+            },
+            desktopMode: {
+                type: Boolean,
+                value: false
+            },
+            mainClasses: {
+                type: String,
+                computed: '_computeClasses(leftShow, rightShow, leftLocked, rightLocked, mobileMode, tabletMode, desktopMode)'
+            },
+            drawerClasses: {
+                type: String,
+                value: '',
+                reflectToAttribute: true,
                 notify: true
             }
+        },
+        _computeClasses: function(leftShow, rightShow, leftLocked, rightLocked, mobileMode, tabletMode, desktopMode) {
+            var classStr = [];
+            if(leftLocked)      classStr.push('left-locked');
+            if(leftShow)        classStr.push('left-show');
+            if(rightLocked)     classStr.push('right-locked');
+            if(rightShow)       classStr.push('right-show');
+            if(mobileMode)      classStr.push('mobile-mode-main');
+            if(tabletMode)      classStr.push('tablet-mode-main');
+            if(desktopMode)     classStr.push('desktop-mode-main');
+
+            this.drawerClasses = classStr.join(' ');
+
+            return classStr.join(' ');
+        },
+        toggleLeft: function() {
+            this.rightShow = false;
+            this.leftShow = !this.leftShow;
+        },
+        toggleRight: function() {
+            this.leftShow = false;
+            this.rightShow = !this.rightShow;
+        },
+        pinLeft: function() {
+            this.leftLocked = !this.leftLocked;
+            this.closeDrawers();
+            this.mobileModeCheck();
+        },
+        pinRight: function() {
+            this.rightLocked = !this.rightLocked;
+            this.closeDrawers();
+            this.mobileModeCheck();
         }
     });
 </script>
