Adding in gulp modules to compile sass. Fixes to the pd-drawer template file.

--- a/app/components/pd-dashboard/pd-dashboard.html
+++ b/app/components/pd-dashboard/pd-dashboard.html
@@ -3,6 +3,11 @@
 <link rel="import" href="../pd-drawer/pd-drawer.html">
 
 <dom-module id="pd-dashboard">
+    <link rel="stylesheet" href="../../../app/css/main.css" />
+    <link rel="stylesheet" href="../../../app/css/position.css" />
+    <link rel="stylesheet" href="../../../app/css/font.css" />
+    <link rel="stylesheet" href="../../../app/css/skins/default/colors.css" />
+    <link rel="import" href="../../../app/css/skins/default/color-vars.css" />
     <template>
         <pd-drawer>
             <div class="logo">
