Added custom pd-list component.

--- a/app/components/pd-dashboard/pd-dashboard.html
+++ b/app/components/pd-dashboard/pd-dashboard.html
@@ -2,6 +2,10 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../pd-drawer/pd-drawer.html">
 
+<link rel="import" href="../../../bower_components/iron-icons/iron-icons.html" />
+<link rel="import" href="../../../bower_components/iron-icon/iron-icon.html" />
+<link rel="import" href="../../../app/components/pd-list/pd-list-item.html" />
+
 <dom-module id="pd-dashboard">
     <link rel="stylesheet" href="../../../app/css/main.css" />
     <link rel="stylesheet" href="../../../app/css/position.css" />
@@ -30,8 +34,8 @@
             <div class="right-menu">
                 Right menu goes in here
             </div>
-            <div class="left-menu">
-                Left menu goes in here
+            <div id="main">
+                Main items will go in here
             </div>
         </pd-drawer>
     </template>
