--- a/app/components/pd-dashboard/pd-dashboard.html
+++ b/app/components/pd-dashboard/pd-dashboard.html
@@ -6,6 +6,9 @@
 <link rel="import" href="../../../bower_components/iron-icon/iron-icon.html" />
 <link rel="import" href="../../../app/components/pd-list/pd-list-item.html" />
 
+<link rel="import" href="../../../app/components/pd-flatiron-director/pd-flatiron-director.html" />
+<link rel="import" href="../../../bower_components/iron-ajax/iron-ajax.html" />
+ 
 <dom-module id="pd-dashboard">
     <link rel="stylesheet" href="../../../app/css/main.css" />
     <link rel="stylesheet" href="../../../app/css/position.css" />
@@ -38,11 +41,59 @@
                 Main items will go in here
             </div>
         </pd-drawer>
+        <pd-flatiron-director route="{{route}}">
+        </pd-flatiron-director>
+        <iron-ajax id="ajax" url="" handle-as="document"></iron-ajax>
     </template>
 </dom-module>
 
 <script>
     Polymer({
-        is: 'pd-dashboard'
+        is: 'pd-dashboard',
+        properties: {
+            route: {
+                type: String,
+                notify: true,
+                observer: 'routeChanged'
+            }
+        },
+        routeChanged: function(newValue, oldValue) {
+            var page        = newValue.replace('!', ''),
+                params      = page.split('?')[1],
+                pageName    = page.split('?')[0];
+
+            if (pageName === '') pageName = 'home';
+
+            this.$.ajax.url = 'app/pages/' + pageName + '/' + pageName + '.html?' + params
+            this.$.ajax.generateRequest(); 
+        },
+        ready: function() {
+            var self = this;
+            self.$.ajax.addEventListener('response', function(response) {
+                try {
+                    
+                    self.async(function() {
+
+                        var links = response.detail.response.head.querySelectorAll('link');
+                        for(var i = 0; i < links.length; i++) {
+                            if(!window.document.head.innerHTML.indexOf(links[i].href.toLowerCase()) !== -1) {
+                                var l   = document.createElement('link');
+                                l.rel   = 'import';
+                                l.href  = links[i].href.toLowerCase();
+                                document.head.appendChild(l);
+                            }
+                        }
+
+                        var l = document.createElement('div');
+                        l.innerHTML = response.detail.response.body.innerHTML;
+                        self.$.main.innerHTML = '';
+                        self.$.main.appendChild(l);
+                    });
+                }
+                catch(e) {
+                    console.log('Error rendering content: ', e);
+                }
+            });
+        }
     });
 </script>
