Adding users on the staff control panel.

--- a/app/components/pd-select/pd-select.html
+++ b/app/components/pd-select/pd-select.html
@@ -19,7 +19,7 @@
         }
     </style>
     <template>
-        <div id="pdSelector" class$="{{toggledClass}} m-1">
+        <div id="pdSelector" class$="{{toggledClass}}">
 
             <div class="select-wrap p-relative m-t-0 m-b-0">
                 <label class="label p-b-0-5" hidden$="[[!label]]">
