--- a/app/components/pd-card/pd-card.html
+++ b/app/components/pd-card/pd-card.html
@@ -15,7 +15,7 @@
         }
     </style>
     <template>
-        <div class="pd-card-wrapper m-r-1 m-l-1 m-t-1 c-text c-text-bg">
+        <div class="pd-card-wrapper p-1 m-r-1 m-l-1 m-t-1 c-text c-text-bg">
             <template is="dom-if" if="{{head}}">
                 <h2 class="header c-n-light c-b-b-dark p-t-0-5 p-b-0-5 p-l-1 p-r-1">
                     <span>
