--- a/app/components/pd-drawer/pd-drawer.html
+++ b/app/components/pd-drawer/pd-drawer.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html" />
+<link rel="import" href="../../../../../app/components/pd-search/pd-search.html" />
 
 <dom-module id="pd-drawer">
     <link rel="import" type="css" href="../../../app/components/pd-drawer/pd-drawer.css" />
@@ -19,6 +20,7 @@
                 <div class="pd-toolbar-header p-1-05 f-left">
                     <content select=".logo"></content>
                 </div>
+                <pd-search id="search" class="f-right"></pd-search>
                 <paper-icon-button class="right-show-btn f-right" icon="more-vert" title="more-vert" on-click="toggleRight">
                 </paper-icon-button>
             </div>
@@ -146,7 +148,12 @@
             this.mobileModeCheck();
         },
         ready: function() {
-
+            this.$.search.addEventListener('search', function(event) {
+                console.log(event.detail);
+            });
+            this.$.search.addEventListener('searchClosed', function(event) {
+                console.log('closed');
+            });
         }
     });
 </script>
