--- a/app/components/pd-search/pd-search.html
+++ b/app/components/pd-search/pd-search.html
@@ -75,6 +75,9 @@
             }
             return 'search-hidden';
         },
+        searchAction: function() {
+            this.fire('search', this.querySelector('.search-input').value);
+        },
         search: function() {
             this.set('searchEnabled', true);
             this.querySelector('.search-input').$.input.focus();
@@ -82,6 +85,7 @@
         },
         close: function() {
             this.set('searchEnabled', false);
+            this.fire('searchClosed');
         }
     });
 </script>
