--- a/app/components/pd-drawer/pd-drawer.html
+++ b/app/components/pd-drawer/pd-drawer.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html" />
-<link rel="import" href="../../../../../app/components/pd-search/pd-search.html" />
+<link rel="import" href="../../../app/components/pd-search/pd-search.html" />
 
 <dom-module id="pd-drawer">
     <link rel="import" type="css" href="../../../app/components/pd-drawer/pd-drawer.css" />
